# yida-handbook

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
source/: conf.py  index.rst
source/doc/Yida/: index.rst  修改记录功能.md  删除记录功能.md  图片下载功能.md  批量删除记录功能.md  新增记录功能.md  查询页面功能.md
